Changing navBar destaque with 3d effects

--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 						<div id="barDestaque">
 							<!-- 199 sera o id_campanha que pegarei via get json -->
 							<button class="btnDestaque" onclick="event.preventDefault(); gostar(1, 199, $(this)); "> <div class="spriteDestaque like"></div> <h5>Gostei</h5> <span>137</span> </button>
-							<div class="innerLine"></div>
+							<!-- <div class="innerLine"></div> -->
 							<button class="btnDestaque" onclick="event.preventeDefault(); gostar(0, 199); "><div class="spriteDestaque dislike"></div> <h5>Não gostei</h5></button>
-							<div class="innerLine"></div>
+							<!-- <div class="innerLine"></div> -->
 							<button class="btnDestaque"><div class="spriteDestaque share"></div> <h5>Share</h5></button>
-							<div class="innerLine"></div>
-							<button class="btnDestaque"><div class="spriteDestaque favorito"></div> <h5>Favorito</h5></button>
+							<!-- <div class="innerLine"></div> -->
+							<button class="btnDestaque"><div class="spriteDestaque favorito"></div> <h5>Reservar</h5></button>
 							<!-- trocar favorito, nao existira, entrara Reservar -->
-							<div class="innerLine"></div>
+							<!-- <div class="innerLine"></div> -->
 							<button class="btnDestaque"><div class="spriteDestaque comment"></div> <h5>Comentar</h5></button>
 
 						</div>
