Fix facebook bug

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<div id="logo"><span>O shopping na palma da mão</span></div>
 					<div id="statusLogin">
 						
-						<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash3/195225_100001708066608_415344984_q.jpg" alt="">
+						<img src="" alt="">
 						<div id="profile">
 							<h6>Márcio Vicente Santos </h6>
 							<a href="#" class="logout"> <i class="icon icon-white icon-remove"></i>Sair</a>
@@ -126,7 +126,15 @@
 					
 				</section>
 			</div>
+			<div class="footerPush"></div>
 		</div>
+
+
+		<footer id="footer">
+
+		</footer>
+
+
 	</div>
 	
 	<script src="js/jquery.1-9-1.min.js"></script>
