Hot day, produtivity zero

--- a/index.html
+++ b/index.html
@@ -153,8 +153,9 @@
 				// depois escolher um efeito legal
 
 				$("#selectShAtivos option").change(function(){
-					var id_shopping = $(this).val();
-					carregarOfertas(id_shopping);
+					// var id_shopping = $(this).val();
+					// carregarOfertas(id_shopping);
+					alert($(this).val());
 				});
 			});
 
