--- a/index.html
+++ b/index.html
@@ -134,36 +134,44 @@
 	</footer>
 	
 	<script src="js/jquery.1-9-1.min.js"></script>
+	<script src="js/index.js"></script>
 	<script src="js/global.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 
 	<script>
-
-		(function ($) { 
-			var control = 0;
-			$('#cbCategorias').change(function(){
-				var cat = $(this).val();
-				if(cat == 0)
-					$('.ofertaUnique').show();
-				else{
-					$('.ofertaUnique').show();
-					$('.ofertaUnique').not('.categoria'+cat+'').hide();
-				}
+		$(function() {
+			$('.groupoOfertas button[title]').tooltips();			
+		});
+		// (function ($) { 
+		// 	var control = 0;
+		// 	$('#cbCategorias').change(function(){
+		// 		var cat = $(this).val();
+		// 		if(cat == 0)
+		// 			$('.ofertaUnique').show();
+		// 		else{
+		// 			$('.ofertaUnique').show();
+		// 			$('.ofertaUnique').not('.categoria'+cat+'').hide();
+		// 		}
 				
-				// depois escolher um efeito legal
+		// 		// depois escolher um efeito legal
 
-				$("#selectShAtivos option").change(function(){
-					// var id_shopping = $(this).val();
-					// carregarOfertas(id_shopping);
-					alert($(this).val());
-				});
-			});
+		// 		$("#selectShAtivos option").change(function(){
+		// 			// var id_shopping = $(this).val();
+		// 			// carregarOfertas(id_shopping);
+		// 			alert($(this).val());
+		// 		});
+		// 	});
 
  			
-		})(jQuery)
+		// })(jQuery)
 
 		$(document).ready(function(){
 			var usuarioID = null;
+			if(checkLogin()){
+				alert("Checou");
+				imgSrc = "http://graph.facebook.com/"+usuarioID+"/picture?type=small";
+				$('#statusLogin img').attr('src',imgSrc);
+			}
 
 
 		});
@@ -175,6 +183,7 @@
 			var id_shopping = 14;		
 			carregarOfertas(id_shopping);
 		});
+
 
 		
 	</script>
